basis-library/primitive/basis-ffi.sml


structure PrimitiveFFI =
struct
structure CommandLine = 
struct
val (argcGet, argcSet) = _symbol "CommandLine_argc": (unit -> (C.Int.t)) * ((C.Int.t) -> unit);
val (argvGet, argvSet) = _symbol "CommandLine_argv": (unit -> (C.StringArray.t)) * ((C.StringArray.t) -> unit);
val (commandNameGet, commandNameSet) = _symbol "CommandLine_commandName": (unit -> (C.String.t)) * ((C.String.t) -> unit);
end
structure Date = 
struct
val gmTime = _import "Date_gmTime" : (C.Time.t) ref -> (C.Int.t) C.Errno.t;
val localOffset = _import "Date_localOffset" : unit -> C.Double.t;
val localTime = _import "Date_localTime" : (C.Time.t) ref -> (C.Int.t) C.Errno.t;
val mkTime = _import "Date_mkTime" : unit -> (C.Time.t) C.Errno.t;
val strfTime = _import "Date_strfTime" : (Char8.t) array * C.Size.t * NullString8.t -> C.Size.t;
structure Tm = 
struct
val getHour = _import "Date_Tm_getHour" : unit -> C.Int.t;
val getIsDst = _import "Date_Tm_getIsDst" : unit -> C.Int.t;
val getMDay = _import "Date_Tm_getMDay" : unit -> C.Int.t;
val getMin = _import "Date_Tm_getMin" : unit -> C.Int.t;
val getMon = _import "Date_Tm_getMon" : unit -> C.Int.t;
val getSec = _import "Date_Tm_getSec" : unit -> C.Int.t;
val getWDay = _import "Date_Tm_getWDay" : unit -> C.Int.t;
val getYDay = _import "Date_Tm_getYDay" : unit -> C.Int.t;
val getYear = _import "Date_Tm_getYear" : unit -> C.Int.t;
val setHour = _import "Date_Tm_setHour" : C.Int.t -> unit;
val setIsDst = _import "Date_Tm_setIsDst" : C.Int.t -> unit;
val setMDay = _import "Date_Tm_setMDay" : C.Int.t -> unit;
val setMin = _import "Date_Tm_setMin" : C.Int.t -> unit;
val setMon = _import "Date_Tm_setMon" : C.Int.t -> unit;
val setSec = _import "Date_Tm_setSec" : C.Int.t -> unit;
val setWDay = _import "Date_Tm_setWDay" : C.Int.t -> unit;
val setYDay = _import "Date_Tm_setYDay" : C.Int.t -> unit;
val setYear = _import "Date_Tm_setYear" : C.Int.t -> unit;
end
end
structure IEEEReal = 
struct
val getRoundingMode = _import "IEEEReal_getRoundingMode" : unit -> C.Int.t;
structure RoundingMode = 
struct
val FE_DOWNWARD = _const "IEEEReal_RoundingMode_FE_DOWNWARD" : C.Int.t;
val FE_NOSUPPORT = _const "IEEEReal_RoundingMode_FE_NOSUPPORT" : C.Int.t;
val FE_TONEAREST = _const "IEEEReal_RoundingMode_FE_TONEAREST" : C.Int.t;
val FE_TOWARDZERO = _const "IEEEReal_RoundingMode_FE_TOWARDZERO" : C.Int.t;
val FE_UPWARD = _const "IEEEReal_RoundingMode_FE_UPWARD" : C.Int.t;
end
val setRoundingMode = _import "IEEEReal_setRoundingMode" : C.Int.t -> unit;
end
structure MLton = 
struct
structure Itimer = 
struct
val PROF = _const "MLton_Itimer_PROF" : C.Int.t;
val REAL = _const "MLton_Itimer_REAL" : C.Int.t;
val set = _import "MLton_Itimer_set" : C.Int.t * C.Time.t * C.SUSeconds.t * C.Time.t * C.SUSeconds.t -> (C.Int.t) C.Errno.t;
val VIRTUAL = _const "MLton_Itimer_VIRTUAL" : C.Int.t;
end
structure Process = 
struct
val cwait = _import "MLton_Process_cwait" : C.PId.t * (C.Status.t) ref -> (C.PId.t) C.Errno.t;
val spawne = _import "MLton_Process_spawne" : NullString8.t * NullString8Array.t * NullString8Array.t -> (C.Int.t) C.Errno.t;
val spawnp = _import "MLton_Process_spawnp" : NullString8.t * NullString8Array.t -> (C.Int.t) C.Errno.t;
end
structure Rlimit = 
struct
val AS = _const "MLton_Rlimit_AS" : C.Int.t;
val CORE = _const "MLton_Rlimit_CORE" : C.Int.t;
val CPU = _const "MLton_Rlimit_CPU" : C.Int.t;
val DATA = _const "MLton_Rlimit_DATA" : C.Int.t;
val FSIZE = _const "MLton_Rlimit_FSIZE" : C.Int.t;
val get = _import "MLton_Rlimit_get" : C.Int.t -> (C.Int.t) C.Errno.t;
val getHard = _import "MLton_Rlimit_getHard" : unit -> C.RLim.t;
val getSoft = _import "MLton_Rlimit_getSoft" : unit -> C.RLim.t;
val INFINITY = _const "MLton_Rlimit_INFINITY" : C.RLim.t;
val NOFILE = _const "MLton_Rlimit_NOFILE" : C.Int.t;
val set = _import "MLton_Rlimit_set" : C.Int.t * C.RLim.t * C.RLim.t -> (C.Int.t) C.Errno.t;
val STACK = _const "MLton_Rlimit_STACK" : C.Int.t;
end
structure Rusage = 
struct
val children_stime_sec = _import "MLton_Rusage_children_stime_sec" : unit -> C.Time.t;
val children_stime_usec = _import "MLton_Rusage_children_stime_usec" : unit -> C.SUSeconds.t;
val children_utime_sec = _import "MLton_Rusage_children_utime_sec" : unit -> C.Time.t;
val children_utime_usec = _import "MLton_Rusage_children_utime_usec" : unit -> C.SUSeconds.t;
val gc_stime_sec = _import "MLton_Rusage_gc_stime_sec" : unit -> C.Time.t;
val gc_stime_usec = _import "MLton_Rusage_gc_stime_usec" : unit -> C.SUSeconds.t;
val gc_utime_sec = _import "MLton_Rusage_gc_utime_sec" : unit -> C.Time.t;
val gc_utime_usec = _import "MLton_Rusage_gc_utime_usec" : unit -> C.SUSeconds.t;
val getrusage = _import "MLton_Rusage_getrusage" : unit -> unit;
val self_stime_sec = _import "MLton_Rusage_self_stime_sec" : unit -> C.Time.t;
val self_stime_usec = _import "MLton_Rusage_self_stime_usec" : unit -> C.SUSeconds.t;
val self_utime_sec = _import "MLton_Rusage_self_utime_sec" : unit -> C.Time.t;
val self_utime_usec = _import "MLton_Rusage_self_utime_usec" : unit -> C.SUSeconds.t;
end
structure Syslog = 
struct
val closelog = _import "MLton_Syslog_closelog" : unit -> unit;
structure Facility = 
struct
val LOG_AUTH = _const "MLton_Syslog_Facility_LOG_AUTH" : C.Int.t;
val LOG_CRON = _const "MLton_Syslog_Facility_LOG_CRON" : C.Int.t;
val LOG_DAEMON = _const "MLton_Syslog_Facility_LOG_DAEMON" : C.Int.t;
val LOG_KERN = _const "MLton_Syslog_Facility_LOG_KERN" : C.Int.t;
val LOG_LOCAL0 = _const "MLton_Syslog_Facility_LOG_LOCAL0" : C.Int.t;
val LOG_LOCAL1 = _const "MLton_Syslog_Facility_LOG_LOCAL1" : C.Int.t;
val LOG_LOCAL2 = _const "MLton_Syslog_Facility_LOG_LOCAL2" : C.Int.t;
val LOG_LOCAL3 = _const "MLton_Syslog_Facility_LOG_LOCAL3" : C.Int.t;
val LOG_LOCAL4 = _const "MLton_Syslog_Facility_LOG_LOCAL4" : C.Int.t;
val LOG_LOCAL5 = _const "MLton_Syslog_Facility_LOG_LOCAL5" : C.Int.t;
val LOG_LOCAL6 = _const "MLton_Syslog_Facility_LOG_LOCAL6" : C.Int.t;
val LOG_LOCAL7 = _const "MLton_Syslog_Facility_LOG_LOCAL7" : C.Int.t;
val LOG_LPR = _const "MLton_Syslog_Facility_LOG_LPR" : C.Int.t;
val LOG_MAIL = _const "MLton_Syslog_Facility_LOG_MAIL" : C.Int.t;
val LOG_NEWS = _const "MLton_Syslog_Facility_LOG_NEWS" : C.Int.t;
val LOG_USER = _const "MLton_Syslog_Facility_LOG_USER" : C.Int.t;
val LOG_UUCP = _const "MLton_Syslog_Facility_LOG_UUCP" : C.Int.t;
end
structure Logopt = 
struct
val LOG_CONS = _const "MLton_Syslog_Logopt_LOG_CONS" : C.Int.t;
val LOG_NDELAY = _const "MLton_Syslog_Logopt_LOG_NDELAY" : C.Int.t;
val LOG_NOWAIT = _const "MLton_Syslog_Logopt_LOG_NOWAIT" : C.Int.t;
val LOG_ODELAY = _const "MLton_Syslog_Logopt_LOG_ODELAY" : C.Int.t;
val LOG_PID = _const "MLton_Syslog_Logopt_LOG_PID" : C.Int.t;
end
val openlog = _import "MLton_Syslog_openlog" : NullString8.t * C.Int.t * C.Int.t -> unit;
structure Severity = 
struct
val LOG_ALERT = _const "MLton_Syslog_Severity_LOG_ALERT" : C.Int.t;
val LOG_CRIT = _const "MLton_Syslog_Severity_LOG_CRIT" : C.Int.t;
val LOG_DEBUG = _const "MLton_Syslog_Severity_LOG_DEBUG" : C.Int.t;
val LOG_EMERG = _const "MLton_Syslog_Severity_LOG_EMERG" : C.Int.t;
val LOG_ERR = _const "MLton_Syslog_Severity_LOG_ERR" : C.Int.t;
val LOG_INFO = _const "MLton_Syslog_Severity_LOG_INFO" : C.Int.t;
val LOG_NOTICE = _const "MLton_Syslog_Severity_LOG_NOTICE" : C.Int.t;
val LOG_WARNING = _const "MLton_Syslog_Severity_LOG_WARNING" : C.Int.t;
end
val syslog = _import "MLton_Syslog_syslog" : C.Int.t * NullString8.t -> unit;
end
end
structure Net = 
struct
val htonl = _import "Net_htonl" : Word32.t -> Word32.t;
val htons = _import "Net_htons" : Word16.t -> Word16.t;
val ntohl = _import "Net_ntohl" : Word32.t -> Word32.t;
val ntohs = _import "Net_ntohs" : Word16.t -> Word16.t;
end
structure NetHostDB = 
struct
val getByAddress = _import "NetHostDB_getByAddress" : (Word8.t) vector * C.Socklen.t -> Bool.t;
val getByName = _import "NetHostDB_getByName" : NullString8.t -> Bool.t;
val getEntryAddrsN = _import "NetHostDB_getEntryAddrsN" : C.Int.t * (Word8.t) array -> unit;
val getEntryAddrsNum = _import "NetHostDB_getEntryAddrsNum" : unit -> C.Int.t;
val getEntryAddrType = _import "NetHostDB_getEntryAddrType" : unit -> C.Int.t;
val getEntryAliasesN = _import "NetHostDB_getEntryAliasesN" : C.Int.t -> C.String.t;
val getEntryAliasesNum = _import "NetHostDB_getEntryAliasesNum" : unit -> C.Int.t;
val getEntryLength = _import "NetHostDB_getEntryLength" : unit -> C.Int.t;
val getEntryName = _import "NetHostDB_getEntryName" : unit -> C.String.t;
val getHostName = _import "NetHostDB_getHostName" : (Char8.t) array * C.Size.t -> (C.Int.t) C.Errno.t;
val INADDR_ANY = _const "NetHostDB_INADDR_ANY" : C.Int.t;
val inAddrSize = _const "NetHostDB_inAddrSize" : C.Size.t;
end
structure NetProtDB = 
struct
val getByName = _import "NetProtDB_getByName" : NullString8.t -> Bool.t;
val getByNumber = _import "NetProtDB_getByNumber" : C.Int.t -> Bool.t;
val getEntryAliasesN = _import "NetProtDB_getEntryAliasesN" : C.Int.t -> C.String.t;
val getEntryAliasesNum = _import "NetProtDB_getEntryAliasesNum" : unit -> C.Int.t;
val getEntryName = _import "NetProtDB_getEntryName" : unit -> C.String.t;
val getEntryProto = _import "NetProtDB_getEntryProto" : unit -> C.Int.t;
end
structure NetServDB = 
struct
val getByName = _import "NetServDB_getByName" : NullString8.t * NullString8.t -> Bool.t;
val getByNameNull = _import "NetServDB_getByNameNull" : NullString8.t -> Bool.t;
val getByPort = _import "NetServDB_getByPort" : C.Int.t * NullString8.t -> Bool.t;
val getByPortNull = _import "NetServDB_getByPortNull" : C.Int.t -> Bool.t;
val getEntryAliasesN = _import "NetServDB_getEntryAliasesN" : C.Int.t -> C.String.t;
val getEntryAliasesNum = _import "NetServDB_getEntryAliasesNum" : unit -> C.Int.t;
val getEntryName = _import "NetServDB_getEntryName" : unit -> C.String.t;
val getEntryPort = _import "NetServDB_getEntryPort" : unit -> C.Int.t;
val getEntryProto = _import "NetServDB_getEntryProto" : unit -> C.String.t;
end
structure OS = 
struct
structure IO = 
struct
val poll = _import "OS_IO_poll" : (C.Fd.t) vector * (C.Short.t) vector * C.NFds.t * C.Int.t * (C.Short.t) array -> (C.Int.t) C.Errno.t;
val POLLIN = _const "OS_IO_POLLIN" : C.Short.t;
val POLLOUT = _const "OS_IO_POLLOUT" : C.Short.t;
val POLLPRI = _const "OS_IO_POLLPRI" : C.Short.t;
end
end
structure Posix = 
struct
structure Error = 
struct
val clearErrno = _import "Posix_Error_clearErrno" : unit -> unit;
val E2BIG = _const "Posix_Error_E2BIG" : C.Int.t;
val EACCES = _const "Posix_Error_EACCES" : C.Int.t;
val EADDRINUSE = _const "Posix_Error_EADDRINUSE" : C.Int.t;
val EADDRNOTAVAIL = _const "Posix_Error_EADDRNOTAVAIL" : C.Int.t;
val EAFNOSUPPORT = _const "Posix_Error_EAFNOSUPPORT" : C.Int.t;
val EAGAIN = _const "Posix_Error_EAGAIN" : C.Int.t;
val EALREADY = _const "Posix_Error_EALREADY" : C.Int.t;
val EBADF = _const "Posix_Error_EBADF" : C.Int.t;
val EBADMSG = _const "Posix_Error_EBADMSG" : C.Int.t;
val EBUSY = _const "Posix_Error_EBUSY" : C.Int.t;
val ECANCELED = _const "Posix_Error_ECANCELED" : C.Int.t;
val ECHILD = _const "Posix_Error_ECHILD" : C.Int.t;
val ECONNABORTED = _const "Posix_Error_ECONNABORTED" : C.Int.t;
val ECONNREFUSED = _const "Posix_Error_ECONNREFUSED" : C.Int.t;
val ECONNRESET = _const "Posix_Error_ECONNRESET" : C.Int.t;
val EDEADLK = _const "Posix_Error_EDEADLK" : C.Int.t;
val EDESTADDRREQ = _const "Posix_Error_EDESTADDRREQ" : C.Int.t;
val EDOM = _const "Posix_Error_EDOM" : C.Int.t;
val EDQUOT = _const "Posix_Error_EDQUOT" : C.Int.t;
val EEXIST = _const "Posix_Error_EEXIST" : C.Int.t;
val EFAULT = _const "Posix_Error_EFAULT" : C.Int.t;
val EFBIG = _const "Posix_Error_EFBIG" : C.Int.t;
val EHOSTUNREACH = _const "Posix_Error_EHOSTUNREACH" : C.Int.t;
val EIDRM = _const "Posix_Error_EIDRM" : C.Int.t;
val EILSEQ = _const "Posix_Error_EILSEQ" : C.Int.t;
val EINPROGRESS = _const "Posix_Error_EINPROGRESS" : C.Int.t;
val EINTR = _const "Posix_Error_EINTR" : C.Int.t;
val EINVAL = _const "Posix_Error_EINVAL" : C.Int.t;
val EIO = _const "Posix_Error_EIO" : C.Int.t;
val EISCONN = _const "Posix_Error_EISCONN" : C.Int.t;
